Fixed bug #37046 (foreach breaks static scope)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@211240 c90b9560-bf6c-de11-be94-00142212c4b1